# mlcms

./: .gitignore  CMakeLists.txt  Dockerfile  build.sh  formater.sh  unit-test.sh
communication-layer/: CMakeLists.txt
communication-layer/include/: Core.hpp  GrpcClient.hpp  GrpcServer.hpp  MessageRequestHolder.hpp  MessageRequestSender.hpp  Observer.hpp
communication-layer/include/entity/: MessageRequest.hpp  OuterMessageRequest.hpp  PriorityCredit.hpp  QueueSize.hpp
communication-layer/include/interface/: AvailabilityProvider.hpp  MessageRequestObserver.hpp  MessageRequestPuller.hpp  MessageRequestPusher.hpp
communication-layer/src/: CMakeLists.txt  Core.cpp  GrpcClient.cpp  GrpcServer.cpp  MessageRequestHolder.cpp  MessageRequestSender.cpp  Observer.cpp  main.cpp
communication-layer/test/: CMakeLists.txt
communication-layer/test/mock/include/: MockAvailabilityProvider.hpp  MockGrpcClient.hpp  MockMessageRequestObserver.hpp  MockMessageRequestPuller.hpp  MockMessageRequestPusher.hpp  MockMessageRequestSender.hpp  MockObserver.hpp
communication-layer/test/mock/src/: CMakeLists.txt  MockCore.cpp  MockGrpcClient.cpp  MockGrpcServer.cpp  MockMessageRequestSender.cpp  MockObserver.cpp
communication-layer/test/stub/: CMakeLists.txt  StubMessageRequestHolder.cpp
communication-layer/test/unit-test/: CMakeLists.txt  unit_test_Core.cpp  unit_test_GrpcClient.cpp  unit_test_GrpcServer.cpp  unit_test_MessageRequestHolder.cpp  unit_test_MessageRequestSender.cpp  unit_test_Observer.cpp  unit_test_main.cpp
consumer/: CMakeLists.txt
consumer/include/: Core.hpp  GrpcServer.hpp
consumer/src/: CMakeLists.txt  Core.cpp  GrpcServer.cpp  main.cpp
consumer/test/: CMakeLists.txt
consumer/test/mock/include/: MockCore.hpp  MockGrpcServer.hpp
consumer/test/mock/src/: CMakeLists.txt  MockCore.cpp  MockGrpcServer.cpp
consumer/test/unit-test/: CMakeLists.txt  unit_test_GrpcServer.cpp  unit_test_main.cpp
middleware/: CMakeLists.txt
middleware/include/middleware/: BaseGrpcClient.hpp  BaseGrpcServer.hpp  GrpcPorts.hpp  Logger.hpp  SleepWrapper.hpp
middleware/src/: BaseGrpcServer.cpp  CMakeLists.txt  Logger.cpp  SleepWrapper.cpp
middleware/test/: CMakeLists.txt
middleware/test/fake/include/: FakeLogger.hpp
middleware/test/fake/internal-include/: FakeLog4Cpp.hpp
middleware/test/fake/src/: CMakeLists.txt  FakeLog4Cpp.cpp  FakeLogger.cpp
middleware/test/mock/include/: MockSleepWrapper.hpp
middleware/test/mock/src/: CMakeLists.txt  MockSleepWrapper.cpp
middleware/test/unit-test/: CMakeLists.txt  unit_test_BaseGrpcServer.cpp  unit_test_Logger.cpp  unit_test_SleepWrapper.cpp
middleware/test/unit-test/protobufs/: temp.proto
protobufs/: communication-layer.proto  consumer.proto
provider/: CMakeLists.txt
provider/include/: Core.hpp  GrpcClient.hpp
provider/src/: CMakeLists.txt  Core.cpp  GrpcClient.cpp  main.cpp
provider/test/: CMakeLists.txt
provider/test/mock/include/: MockCore.hpp  MockGrpcClient.hpp
provider/test/mock/src/: CMakeLists.txt  MockCore.cpp  MockGrpcClient.cpp
provider/test/unit-test/: CMakeLists.txt  unit_test_Core.cpp  unit_test_GrpcClient.cpp  unit_test_main.cpp
